--- a/src/components/NavigationBar/index.css
+++ b/src/components/NavigationBar/index.css
@@ -1,3 +1,8 @@
 .navBar-color {
     background-color: teal !important;
 }
+
+.unstylizedLink{
+    color: black !important;
+    text-decoration: none !important;
+}
