--- a/src/components/ProductPreview/index.css
+++ b/src/components/ProductPreview/index.css
@@ -1,5 +1,6 @@
 .productName {
     font-size: 3em !important;
+    background-color: #fafafa !important;
 }
 .productPreview{
     margin: 10px !important;
@@ -13,6 +14,12 @@
 .bold {
     font-weight: bold !important;
 }
+
+.unstylizedLink{
+    color: black !important;
+    text-decoration: none !important;
+}
+
 
 img.mediumImage {
     padding-left: 2rem !important;
